fix align left send feetback and merge error

--- a/ui/references/templates/default/page_sendFeedback.css
+++ b/ui/references/templates/default/page_sendFeedback.css
@@ -33,7 +33,7 @@
    font-size: 32px;
    line-height: 99px;
    color: #FFFFFF;
-   text-align: center;
+   text-align: left;
    qproperty-alignment: AlignCenter;
    border: none;
    wordWrap:true;
